--- a/app-quick-start.adoc
+++ b/app-quick-start.adoc
@@ -1,1 +1,31 @@
-= Motivated Moms App Quick Start Guide
+= App Quick Start Guide
+:description: How to use the Motivated Moms mobile app
+:author: Matthew Murphy
+:email: matt@mattmurphy.rocks
+:date: 4/8/2021
+:toc: right
+version: 2.00
+
+== Before You Begin
+
+== Getting Started
+
+=== Working with Individual Tasks
+
+[glossary]
+How do I complete a task?::
+    1. From the **Daily Task List**, tap any incomplete task to mark it complete.
+How do I add a task?::
+    1. Tap the plus(+) icon in the lower right corner of the **Daily Task List** and tap __New Task__.
+    2. Tap __Add__ to save the task to your **Master Task List**.
+How do I delete a task?::
+    1. From the
+
+How do I reschedule or rename a task?::
+    1. From the **Daily Task List**,
+
+== Working with Task Lists
+
+== Working with People and Rooms
+
+== Other
