--- a/app-quick-start.adoc
+++ b/app-quick-start.adoc
@@ -19,7 +19,7 @@ How do I add a task?::
     1. Tap the plus(+) icon in the lower right corner of the **Daily Task List** and tap __New Task__.
     2. Tap __Add__ to save the task to your **Master Task List**.
 How do I delete a task?::
-    1. From the
+    1. From the **Daily Task List**, swipe any task to the left and tap __Delete__. 
 
 How do I reschedule or rename a task?::
     1. From the **Daily Task List**,
